Sat Oct  2 14:57:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_server.c: code cleanup
	* lib/gam_error.[ch] libgamin/gam_api.c: added a dynamic debugging
	  capability using SIGUSR2

Fri Oct  1 18:15:05 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release 0.0.13

Fri Oct  1 12:01:39 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h server/gam_poll.c: portability cleanups w.r.t.
	  PATH_MAX not in limits.h reported by Michael Banck

Fri Oct  1 11:47:55 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_protocol.h server/gam_connection.c:
	  applied patch from Sergio Garcia to fix a packet size problem
	  on some platforms.

Fri Oct  1 01:13:52 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_node.[hc] server/gam_poll.c server/gam_subscription.[ch]:
	  cleanup and be more defensive.

Thu Sep 30 15:34:19 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release 0.0.12

Tue Sep 28 01:31:52 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: adding missing locks around a list
	  update. Though gam_server is single threaded maybe this
	  is the cause of a list corruption generating a loop.

Mon Sep 27 12:47:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in server/Makefile.am: release 0.0.11

Mon Sep 27 11:53:01 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: applied patch
	  for inotify 0.10 from John McCutchan

Sun Sep 26 21:21:05 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c: added unimplemented entry points 
	  FAMSuspendMonitor and FAMResumeMonitor, c.f. #133162
	* doc/gamin-api.xml doc/gamin-refs.xml: rebuild 

Fri Sep 24 15:15:08 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in server/gam_inotify.c server/local_inotify.h: always