@@ -1,3 +1,8 @@
+Sun Oct  3 16:03:56 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_poll.c server/gam_subscription.c: cleanup, debug
+	  and probable fix for #132429, #133665 and #134413
+
 Sat Oct  2 14:57:58 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_server.c: code cleanup
